[package]

name = "shared-mutex"
version = "0.3.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-shared-mutex.git"
description = "A RwLock that can be used with a Condvar."
readme = "README.md"
license = "MIT"

[dependencies]
poison = "0.1"

[dev-dependencies]
scoped-pool = "0.1"

